--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>Hello</h1>
 <p>Hey, this is some text</p>
-  <p><img src="https://github.com/plemeljr/mercury/blob/master/Group%20Copy.png" /></p>
+  <p><img src="Group Copy.png" /></p>
 </body>
 </html>
